--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: " " #replace the title with something short and catchy to represent your project
-subtitle: "____'s Data Science Portfolio" #replace blank with your name
+subtitle: "Albert Swingler's Data Science Portfolio" #replace blank with your name
 output:
   html_document:
     df_print: paged
