--- a/deliverable1.Rmd
+++ b/deliverable1.Rmd
@@ -19,7 +19,7 @@ This data is from FiveThirtyEight which is a website that gathers data on sports
 congress: wheather they are in the 115th congress session (1/17 to 1/19) or 116th (1/19 to 1/21). 0 if both.
 chamber: if they are in the house or the senate
 bioguide:
-votes: How many bills they have voted on
+votes: How many bills they have voted on total.
 agree_pct: The percentage of time they vote for Trumps position
 predicted_agree: How likely a congressperson is expected to vote with trump based on Trumps 2016 margin
 net_trump_vote: Trump’s share of votes in the 2016 election in the member’s state or district minus Clinton’s
@@ -79,7 +79,7 @@ agree_vs_predicted_agree <- ggplot(averages, aes(predicted_agree, agree_pct)) + 
 agree_vs_predicted_agree
 
 ```
-Visualizing the agree percentage with the predicted agree. As you can see, most congress members voted how they were predicted but there are a few outlers. Several in the bottom right of the graph were predicted to agree over 75% of the time but ended up only agreeing less than 25% of the time
+Visualizing the agree percentage with the predicted agree. As you can see, most congress members voted how they were predicted but there are a few outlers. Several in the bottom right of the graph were predicted to agree over 75% of the time but ended up only agreeing less than 25% of the time. I wanted to make the Repulbicans red and Dems blue but can't figure it out
 
 
 7. Research questions to explore:
