--- a/deliverable1.Rmd
+++ b/deliverable1.Rmd
@@ -10,7 +10,7 @@ This is where I will be documenting what I do in my project.
 I choose this topic because politics is an important thing in our "democracy". It is especially important to keep track of what polititians say versus what they do in this day and age where it seems like most of them can lie and get away with anything.
 
 2. Data set.
-My data is from FiveThirtyEight and it has information about which congress peoples votes aligned with Trump predictions for how they will vote in the future. 
+My data is from FiveThirtyEight and it has information about which congress peoples votes aligned with Trump predictions for how they will vote in the future. https://projects.fivethirtyeight.com/congress-trump-score/
 
 3. Source:
 This data is from FiveThirtyEight which is a website that gathers data on sports, politics, and economics. This site is widely recognized as being reliable and used as a source by publications like the New York Times.
@@ -18,7 +18,7 @@ This data is from FiveThirtyEight which is a website that gathers data on sports
 4. Variables:
 congress: wheather they are in the 115th congress session (1/17 to 1/19) or 116th (1/19 to 1/21). 0 if both.
 chamber: if they are in the house or the senate
-bioguide:
+bioguide: government given alphanumeric ID for each legislator
 votes: How many bills they have voted on total.
 agree_pct: The percentage of time they vote for Trumps position
 predicted_agree: How likely a congressperson is expected to vote with trump based on Trumps 2016 margin
@@ -29,7 +29,6 @@ net_trump_vote: Trump’s share of votes in the 2016 election in the member’s 
 
 
 ```{r}
-
 library("tidyverse")
 library("dplyr")
 library("ggplot2")
@@ -38,7 +37,7 @@ averages <- read_csv("https://raw.githubusercontent.com/introdsci/DataScience-as
 vote_predictions <- read_csv("https://raw.githubusercontent.com/introdsci/DataScience-aswingler1/master/vote_predictions.csv")
 
 ```
-imported the libraries I'm using and the CSVs
+Imported the libraries I'm using and the CSVs
 
 5. Modifications to clean up data:
 ```{r}
@@ -46,21 +45,20 @@ colnames(averages)[colnames(averages) == "votes"] <- "num_votes"
 
 averages$party <- substr(averages$party, 0, 1)
 ```
-renaming vote columns in the tables.
+Renaming vote columns in the tables.
 
 Truncated the party observations so its only the first letter. Previously some of them had the full spelling.
 
-Honestly it seems really clean already. Struggling to find things to change.
 
 
 ```{r}
 politician <- tibble(last_name=averages$last_name, congress=averages$congress, chamber=averages$chamber, num_votes=averages$num_votes, state=averages$state, district=averages$district, party=averages$party)
 
-bill <-tibble(bill_id=vote_predictions$bill_id, roll_id=vote_predictions$roll_id, comgress=vote_predictions$congress, chamber=vote_predictions$chamber, voted_at=vote_predictions$voted_at)
+bill <-tibble(bill_id=vote_predictions$bill_id, roll_id=vote_predictions$roll_id, congress=vote_predictions$congress, chamber=vote_predictions$chamber, voted_at=vote_predictions$voted_at)
 
 
 ```
-creating the dataframes. I seperated out the polititians and the bills.
+Creating the dataframes. I seperated out the polititians and the bills.
 
 6. Data summary with visulizations:
 ```{r}
