--- a/deliverable1.Rmd
+++ b/deliverable1.Rmd
@@ -54,6 +54,10 @@ Truncated the party observations so its only the first letter. Previously some o
 ```{r}
 politician <- tibble(last_name=averages$last_name, congress=averages$congress, chamber=averages$chamber, num_votes=averages$num_votes, state=averages$state, district=averages$district, party=averages$party)
 
+politician <- add_column(politician, generation=3)
+
+
+
 bill <-tibble(bill_id=vote_predictions$bill_id, roll_id=vote_predictions$roll_id, congress=vote_predictions$congress, chamber=vote_predictions$chamber, voted_at=vote_predictions$voted_at)
 
 
@@ -81,8 +85,8 @@ Visualizing the agree percentage with the predicted agree. As you can see, most 
 
 
 7. Research questions to explore:
-Were congress people who voted strongly with trump in the 115th congress more or less likely to be elected to the 116th congress than people who voted against him before?
 
+Were congress people who voted strongly with trump in the 115th congress more or less likely to be elected to the 116th congress than people who voted against him before?
 
 Were senators or house members more likely to vote with Trump?
 
