--- a/phase2.Rmd
+++ b/phase2.Rmd
@@ -13,11 +13,16 @@ https://www.pewresearch.org/fact-tank/2018/08/21/immigrants-or-children-of-immig
 https://www.pewresearch.org/fact-tank/2019/01/24/in-116th-congress-at-least-13-of-lawmakers-are-immigrants-or-the-children-of-immigrants/
 
 
-
+Here I imported the data from the tables on the two websites and created two tibbles with it.
 ```{r}
 library("tidyverse")
 library("rvest")
 library("dplyr")
+library("knitr")
+
+purl("deliverable1.Rmd", output = "part1.r") # produces r source from rmd
+source("part1.r") # executes the source
+
 
 congress115 <- read_html("https://www.pewresearch.org/fact-tank/2018/08/21/immigrants-or-children-of-immigrants-make-up-at-least-12-of-congress/")
 congress116 <- read_html("https://www.pewresearch.org/fact-tank/2019/01/24/in-116th-congress-at-least-13-of-lawmakers-are-immigrants-or-the-children-of-immigrants/")
@@ -56,7 +61,6 @@ c116Tibble <- tibble(Name = names116, generation = generation116, Parent_or_Memb
 
 
 ```
-Here I imported the data from the tables on the two websites and created two tibbles with it.
 
 
 Cleaning data:
@@ -84,7 +88,7 @@ c116Tibble <- mutate_if(c116Tibble,
 is.character, str_replace_all, pattern = "Child", replacement = "2")
 
 
-as.numeric(as.character(c115Tibble$generation))
+as.numeric(as.character(c116Tibble$generation))
 
 
 
@@ -107,9 +111,11 @@ Relaced the full word for the persons party with just the first letter to match 
 
 Making the persons generation a number instead of first/second and child/immigrant.
 
-Switch "Representative" to "house" and "Senator" to "senate".
+Everyone who is not a first or 2nd generation immigrant was given the generation number 3 because I do not have data for how many generations non recently immigrated congresspeople have been Americans.
 
+Switch "Representative" to "house" and "Senator" to "senate" to match existing data.
 
+Setting the generation in the politician tibble to the correct values. Ended up doing this manually after spending days trying to figure out a better way to do this.
 ```{r}
 politition_with_generation <- merge(c115Tibble, c116Tibble)
 
@@ -340,7 +346,7 @@ summary(politician)
 
 ```
 
-graphs
+Graphing
 ```{r}
 averages <- add_column(averages, politician$generation)
 colnames(averages)[colnames(averages) == "politician$generation"] <- "generation"
@@ -354,21 +360,45 @@ colnames(averages)[colnames(averages) == "politician$generation"] <- "generation
 # levels(averages$agree_pct)
 
 # avg_pct_vote_by_gen <- ggplot(averages, aes(generation, agree_pct)) + geom_bar(stat="identity", width=.5, color="green") + theme(axis.text.x = element_text(angle = 0))
-avg_pct_vote_by_gen <- ggplot(averages, aes(x=generation, y=agree_pct)) + stat_summary(fun.y="mean", geom="bar", color="green")
+avg_pct_vote_by_gen <- ggplot(averages, aes(x=generation, y=agree_pct)) + stat_summary(fun.y="mean", geom="bar", color="green") + ylab("agree percentage") +ggtitle("politician generation vs. agree percentage")
 avg_pct_vote_by_gen
 ```
 
 Here we can see that first generation congresspeople - those who immigrated here themselves, are the least likely to agree with Trump. Third generation congressprople are the most likely to agree with Trump.
 
+I would like to be able to predict how likely it is for congresspeople whos families have been living in the country for several or multiple generations. The above graph gives an idea of the trend.
 
-Models
+
+Modeling
 ```{r}
-#model <- lm(data = politician, formula = generation ~ generation + num_votes)
+cor(as.numeric(averages$generation), averages$agree_pct)
+model <- lm(averages$agree_pct ~ as.numeric(averages$generation) + averages$predicted_agree)
+summary(model)
+plot(model)
 
 
 
 
 ```
+
+
+```{r}
+head(predict(model, data.frame(generation = 4)))
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
