--- a/phase2.Rmd
+++ b/phase2.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "Model Planning and Building"
+author: Albert Swingler
 output: html_notebook
 ---
 
@@ -381,11 +382,22 @@ plot(model)
 
 
 ```{r}
-head(predict(model, data.frame(generation = 4)))
+set.seed(333)
+
+index <- createDataPartition(averages$agree_pct, p = 0.75, list = FALSE)
+
+train <- averages[index, ]
+test <- averages[index, ]
+
+trained_model <- lm(train, formula = agree_pct~predicted_agree+generation)
+summary(trained_model)
+
+
+generation_agree_predictions <- predict(trained_model, test)
+ggplot(data=test, aes(generation_agree_predictions, generation)) + geom_point(color='purple')
 
 ```
-
-
+Here we are creating a test and training set and using that to predict the likelyhood of a politician to agree with Trump based on what generation they are
 
 
 
