--- a/phase2.Rmd
+++ b/phase2.Rmd
@@ -2,6 +2,8 @@
 title: "Model Planning and Building"
 author: Albert Swingler
 output: html_notebook
+html_document:
+df_print: paged
 ---
 
 For this phase of the project I want use the the data I scraped from Pew Research Centers website that has the immigration information of congresspeople in the House and the Senate.
